# earthscii

./: .gitignore  README.md  pyproject.toml  setup.py
Formula/: earthscii.rb
data/n37_w123_1arc_v3_bil/: n37_w123_1arc_v3.blw  n37_w123_1arc_v3.hdr
src/: .gitignore  etopo_loader.py  globe_loader.py  globe_projection.py  globe_tile_manager.py  main.py  map_loader.py  projection.py  renderer.py
src/.ropeproject/: globalnames
src/earthscii/: main.py
