[project]
name = "earthscii"
version = "0.1.1"
description = "Terminal-based 3D terrain viewer."
authors = [
  { name = "Lennier Mulder", email = "lenniermulder@icloud.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "rasterio",
]

[project.scripts]
earthscii = "earthscii.main:main_wrapper"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
